--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-TWILIO_ACCOUNT_SID=ACbda9e5f778d4e4c3eea4c2d7ecc4b2ac
-TWILIO_API_KEY=SK2745be1461dea7b1e7c5fbe402f8c9a7
-TWILIO_API_SECRET=6sTJp49PY3udRBGfIXnlqmOyzWeDGove
-TWILIO_CONFIGURATION_SID=VS463af735610bfaa0aa78d3cd52640e15
+TWILIO_ACCOUNT_SID=AC5efaf6fcea5c2439ca7a6dbe16416b06
+TWILIO_API_KEY= SKa361e2ea63b35ed1d3a25e934d407933
+TWILIO_API_SECRET=da2n8obxJHfJBEMAAQdZqDXX1vvCP6EI
+TWILIO_CONFIGURATION_SID=VS7dd6baf697b5fe8dd44132e4c904912b
